Changes
=======

2.4 (unreleased)
----------------

- Add a new ZCML directive, ``ignoreTemplates`` that let you configure which
  template filename pattern should be ignored by the template registry. The
  pattern attribute of the directive accepts regular expresssion that will be
  matched against the (template) file extension.

- Use the zope configuration action ordering feature to have templates
  registered for all packages and modules, before trying to associate the
  templates. Checking for unassociated templates is done very very late in the
  configuration action order.

- Inherited grok.template() information is looked up against the module of
  the view class that uses the grok.template() directive. This allows for
  subclassing view components that use the grok.template() directive from other
  packages.

2.3 (2011-01-04)
----------------

- Removed the static directory grokker in order to make way for using
  fanstatic.

2.2 (2010-12-16)
----------------

- Factor out a base template grokker that associate templates for
  viewish components.

- Merge support for a global template registry that removes
  unnecessary warnings about unassociated templates in "shared"
  template directories.

2.1 (2010-11-03)
----------------

- Use an update martian and grokcore.component.

- The custom zope publication has now moved from the grok package to
  grokcore.view. The registration of the publication is optional, and is used
  by grok and the grokcore.json package.

- The util function `make_checker` has been moved from the `grok`
  package to ``grokcore.view``.

2.0 (2010-11-01)
----------------

- The `view` directive has been moved from ``grokcore.viewlet`` to
  ``grokcore.view``.

- The `IGrokSecurityView` has been moved from ``grok`` to
  ``grokcore.view``.

- Fix the url() function to behave properly while passed an empty data dict.

- Fix the url() method to accept the "status" and "trusted" arguments, passed